k8s/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/instance: traefik-traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.12
          args:
            - --api.insecure=true
            - --providers.kubernetescrd=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --certificatesresolvers.localresolver.acme.tlschallenge=true
            - --certificatesresolvers.localresolver.acme.email=you@example.com
            - --certificatesresolvers.localresolver.acme.storage=/acme.json
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 443
              name: websecure
              protocol: TCP
            - containerPort: 8080
              name: admin
              protocol: TCP
          volumeMounts:
            - name: acme-storage
              mountPath: /acme.json
              subPath: acme.json
      volumes:
        - name: acme-storage
          emptyDir: {}
