k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 32368
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 31950
    - name: admin
      port: 8080
      targetPort: 8080
